cmake_minimum_required(VERSION 3.23)
project(c C)

set(CMAKE_C_STANDARD 17)

add_executable(c main.c)
#add_executable(c lec.c)
#add_executable(c main.c ip1/c.c ip1/a.c ip1/b.c ip1/e.c ip2/all.c final_2018/1.c final_2018/2.c final_2018/3.c final_2018/4.c file.c "Lab Sheet 9/ex2.c" "Lab Sheet 9/ex3.c" tutorial9/ex1.c tutorial9/ex2.c)
#add_executable(c main.c "IP Exams/IP Exam 2/e-1.c" "IP Exams/IP Exam 2/d-2.c" "IP Exams/IP Exam 2/d-1.c" "IP Exams/IP Exam 2/c-2.c" "IP Exams/IP Exam 2/c-1.c" "IP Exams/IP Exam 2/b-2.c" "IP Exams/IP Exam 2/b-1.c" "IP Exams/IP Exam 2/a-1.c" "IP Exams/IP Exam 2/a-2.c")
#add_executable(c main.c)
#add_executable(c main.c ex-ad.c spam.c)
#add_executable(c ex1.c)
#add_executable(c ex2.c)
#add_executable(c ex3.c)
