cmake_minimum_required(VERSION 3.23)
project(c C)

set(CMAKE_C_STANDARD 17)

#add_executable(c main.c)
add_executable(c main.c)

#add_executable(c main.c "IP Exams/IP Exam 2/e-1.c" "IP Exams/IP Exam 2/d-2.c" "IP Exams/IP Exam 2/d-1.c" "IP Exams/IP Exam 2/c-2.c" "IP Exams/IP Exam 2/c-1.c" "IP Exams/IP Exam 2/b-2.c" "IP Exams/IP Exam 2/b-1.c" "IP Exams/IP Exam 2/a-1.c" "IP Exams/IP Exam 2/a-2.c")
